--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 				<i class="fas fa-video"></i>
 				<h3>online Consultation</h3>
 				<p>You don't need to go anywhere.Just take online consultation.</p>
-				<a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
+				<a href="{% url "online_consultation" %}" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
 			</div>
 
 			<div class="box">
@@ -52,14 +52,14 @@
 				<i class="fa fa-calendar"></i>
 				<h3>Book Your Appointment</h3>
 				<p>Talk and book your appointment as per your convenience.</p>
-				<a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
+				<a href="#Doctors" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
 			</div>
 
 			<div class="box">
 				<i class="fa fa-check-circle"></i>
 				<h3>Check your disease</h3>
 				<p>Yes, Now you can get to know about disease.</p>
-				<a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
+				<a href="{% url "check-disease" %}" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
 			</div>
 
 
