--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
    
 	<link rel="stylesheet" href="{% static 'style.css' %}">
+    {% block extra_css %}{% endblock %}
     <script src="{% static "script1.js" %}"></script>
 
 </head>
@@ -120,7 +121,7 @@
                  
                 </ul>
                 {% if user.is_authenticated %}
-                <a href="{% url 'meds:profile' %}" class="btn rounded-circle p-2 d-flex align-items-center justify-content-center" 
+                <a href="{% url 'meds:profile' %}" class="rounded-circle p-2 d-flex align-items-center justify-content-center" 
                 style="width: 40px; height: 40px;" 
                 data-bs-toggle="tooltip" title="{{ user.full_name }}">
                 <i class="fas fa-user"></i>
