--- a/templates/email_verification.html
+++ b/templates/email_verification.html
@@ -32,7 +32,7 @@
                         </div>
                         
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg">Verify Email</button>
+                            <button type="submit" class="btn btn-lg">Verify Email</button>
                             <a href="{% url 'meds:profile' %}" class="btn btn-outline-secondary">Cancel</a>
                         </div>
                     </form>
