--- a/templates/layout.html
+++ b/templates/layout.html
@@ -107,16 +107,16 @@
                     <a class="nav-link active" aria-current="page" href="{% url "home" %}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#Services">Services</a>
+                    <a class="nav-link active" href="{% url 'home' %}#Services">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#Models">Models</a>
+                    <a class="nav-link active" href="{% url 'home' %}#Models">Models</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#About">About</a>
+                    <a class="nav-link active" href="{% url 'home' %}#About">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#Doctors">Doctors</a>
+                    <a class="nav-link active" href="{% url 'home' %}#Doctors">Doctors</a>
                   </li>
                  
                 </ul>
@@ -139,9 +139,9 @@
           </nav>
                    
 
-                </div>
+                 </div>
             </div>
-        </nav> 
+        </nav>  
             
 
         
