--- a/templates/p_profile.html
+++ b/templates/p_profile.html
@@ -139,6 +139,13 @@
                                                             <i class="fas fa-map-marker-alt me-1"></i> In-Person
                                                         </button>
                                                     {% endif %}
+                                                    {% if appointment.prescription %}
+                                                        <a href="{% url 'meds:view_prescription' appointment.id %}" 
+                                                           class="btn text-white ms-2"
+                                                           style="background-color: #00796b;">
+                                                            <i class="fas fa-prescription me-1"></i> View Prescription
+                                                        </a>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>
@@ -150,7 +157,7 @@
                                 <i class="fas fa-calendar-times mb-3" style="font-size: 48px; color: #6c757d;"></i>
                                 <h5>No Appointments Scheduled</h5>
                                 <p class="text-muted mb-4">You don't have any upcoming appointments. Book a consultation with one of our specialists.</p>
-                                <a href="#Doctors" class="btn text-white" style="background-color: #00796b;">
+                                <a href="{% url "home" %}#Doctors" class="btn text-white" style="background-color: #00796b;">
                                     <i class="fas fa-calendar-plus me-2"></i>Book Appointment
                                 </a>
                             </div>
